# rideshare

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_OSC  Dockerfile_analytic  Dockerfile_server  analytic_data_pull.py  data_pull.py  main.cpp  server_data_pull.py
include/: ChicagoTaxiTripEngine.h  MapEngine.h  MatchingEngine.h  MaximumWeightedMatching.h  Trip.h  TripEngine.h  jsonify.h  utils.h
include/routingkit/: contraction_hierarchy.h  geo_dist.h
src/: ChicagoAnalytic.cpp  ChicagoTaxiTripEngine.cpp  MapEngine.cpp  MatchingEngine.cpp  TripEngine.cpp  server.cpp
src/routingkit/: bit_select.cpp  bit_vector.cpp  buffered_asynchronous_reader.cpp  compare_vector.cpp  compute_contraction_hierarchy.cpp  compute_geographic_distance_weights.cpp  compute_nested_dissection_order.cpp  contraction_hierarchy.cpp  convert_road_dimacs_coordinates.cpp  convert_road_dimacs_graph.cpp  customizable_contraction_hierarchy.cpp  decode_vector.cpp  encode_vector.cpp  examine_ch.cpp  expect.cpp  export_road_dimacs_graph.cpp  file_data_source.cpp  generate_constant_vector.cpp  generate_dijkstra_rank_test_queries.cpp  generate_random_node_list.cpp  generate_random_source_times.cpp  generate_test_queries.cpp  geo_position_to_node.cpp  graph_to_dot.cpp  graph_to_svg.cpp  graph_util.cpp  id_mapper.cpp  nested_dissection.cpp  osm_decoder.cpp  osm_extract.cpp  osm_graph_builder.cpp  osm_profile.cpp  osm_simple.cpp  protobuf.cpp  randomly_permute_nodes.cpp  run_contraction_hierarchy_query.cpp  run_dijkstra.cpp  show_path.cpp  strongly_connected_component.cpp  test_basic_features.cpp  (+27 more)
